--- a/src/app/components/screens/how-to-screen/how-to-screen.component.scss
+++ b/src/app/components/screens/how-to-screen/how-to-screen.component.scss
@@ -7,13 +7,16 @@
 
   .heading {
     margin-bottom: 30px;
+    font-size: 150%;
   }
   .text {
     text-align: center;
     margin-bottom: 50px;
+    font-size: 120%;
   }
   .muted {
     text-align: center;
+    font-size: 100%;
   }
   .button {
     margin-bottom: 30px;
